# uvoxid-rs

./: Cargo.toml  LICENSE  README.md
benches/: uvoxid_bench.rs
src/: core.rs  delta.rs  lib.rs  main.rs  uvoxid.rs
src/utils/: area.rs  distance.rs  geometry.rs  mod.rs  orientation.rs  tolerance.rs  voxel_units.rs
tests/: serde.rs  tests.rs
