[package]
name = "uvoxid"
version = "0.2.0"
edition = "2021"
authors = ["JD Plumbing <jdplumbingsoflo@gmail.com>"]
description = "UVoxID: 192-bit spatial addressing scheme for encoding/decoding micrometer + lat/lon coordinates."
license = "MIT"
repository = "https://github.com/JDPlumbing/uvoxid-rs"
readme = "README.md"
categories = ["science", "simulation", "encoding"]
keywords = ["uvoxid", "voxel", "3d", "encoding", "spatial"]

[[bench]]
name = "uvoxid_bench"
harness = false

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"

[dev-dependencies]
criterion = "0.5"

[dependencies]
ciborium = "0.2.2"
serde = "1.0.225"
serde_json = "1.0.145"

